fix(page): fix some layout problems

--- a/assets/css/partials/get-voucher.css
+++ b/assets/css/partials/get-voucher.css
@@ -12,6 +12,8 @@
   /* 2 columns while each can be at least 320px wide; otherwise 1 column */
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  overflow: hidden;
 
   &:hover,
   &:focus-within {
@@ -100,4 +102,24 @@
     margin: 0 auto;
     max-width: 260px;
   }
+}
+
+.get-voucher .shine {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.5) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  transform: skewX(-25deg);
+  transition: left 0.75s ease-in-out;
+}
+
+.get-voucher:hover .shine {
+  left: 100%;
 }
